# simple-http3

./: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  tls.rs
crates/server/: Cargo.toml
crates/server/src/: handlers.rs  main.rs  router.rs  server.rs  webtransport.rs
crates/web/: Cargo.toml  index.html  style.css
crates/web/src/: app.rs  lib.rs  transport.rs
