[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/server",
    "crates/client",
    "crates/web",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram"] }
h3-webtransport = "0.1"
h3-datagram = "0.0.2"
quinn = "0.11"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rcgen = "0.13"
anyhow = "1.0"
bytes = "1.0"
http = "1.0"
futures = "0.3"
pin-project-lite = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
