[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = "0.11"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
anyhow = "1.0"
bytes = "1.0"
http = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
