[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
h3.workspace = true
h3-quinn.workspace = true
quinn.workspace = true
rustls.workspace = true
anyhow.workspace = true
bytes.workspace = true
http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
