[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
h3.workspace = true
h3-quinn.workspace = true
h3-webtransport.workspace = true
h3-datagram.workspace = true
quinn.workspace = true
rustls.workspace = true
anyhow.workspace = true
bytes.workspace = true
http.workspace = true
futures.workspace = true
pin-project-lite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = "0.4"
sha2 = "0.10"
